2008-02-18  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/build.env.options.tmp: REmove obsolte file.

	* bin/cygbuild.sh:
	(CygbuildDefineGlobalMain): Remove obsolete EXTRA_BUILD_ENV_OPTIONS.
	(CygbuildCmdBuildStdMakefile): Do not use EXTRA_BUILD_ENV_OPTIONS.

2008-02-17  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/patch-after.sh.tmp: New.

	* etc/template/patch-before.sh.tmp: New.

	* bin/cygbuild.pl: (HELP::Other commands): Change
	getsrc command to cygsrc.

	* bin/cygbuild.sh (CygbuildBootVariablesId): Remove unused
	CVS based variables.
	(CygbuildCommandMain): Change getsrc command to cygsrc.
	(CygbuildFileConvertCRLF): New
	(CygbuildFileConvertLF): New.
	(CygbuildFileIsCRLF): New.
	(CygbuildDefineGlobalMain): Define SCRIPT_PATCH_BEFORE,
	SCRIPT_PATCH_AFTER
	(CygbuildBootFunctionExport): Export new functions.

2008-02-16  Jari Aalto  <jari.aalto@cante.net>

	* etc/etc/programs.conf: Replace EGREPP with EGREP.

	* bin/cygbuild.pl: (HELP::Patch management commands::patch):
	Document new behavior that patches are searches recursively.
	Mention about the use of sequential number in patch filenames.

	* bin/cygbuild.sh:
	-- Replace all EGREPP with EGREP.
	(CygbuildPatchList): New. Find any *patch
	recursively.
	(CygbuildPatchApplyMaybe): Use `CygbuildPatchList'.
	(CygbuildInstallFixEtcdirInstall): Ignore cd call error.
	(CygbuildPatchApplyRun): Display patch name always.
	(CygbuildCmdInstallCheckCygpatchDirectory): Loose dot from file
	extension check so that *patch matches both .dpatch and .patch.
	(CygbuildCmdInstallCheckDirStructure): Fix empty dir check.
	(CygbuildCmdInstallCheckDocdir): Warn about missing doc/PKG dir.
	(CygbuildInstallPackageDocs): Add files: Copyright, Install
	(CygbuildBootVariablesGlobalMain): Remove 'debian' from
	variable `cygbuild_opt_exclude_dir'.
	(CygbuildCmdInstallCheckDocdir): Correct typo in find command
	that cause error: -type: command not found
	(CygbuildCmdInstallCheckLineEndings): Ignore error after head(1).