@@ -10,4 +10,3 @@
 # Exclude file from patch:
 # -x Makefile.in
 # -x package.1.in
-
